--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ body {
   margin: 9rem 0 4rem;
 }
 
-.count-down,
-.social-icons {
+.count-down {
   display: flex;
   gap: 1rem;
   justify-content: space-between;
@@ -63,6 +62,7 @@ body {
 /* Single Box */
 .single-box {
   text-align: center;
+  perspective: 100px;
 }
 .single-box .num {
   margin: 1rem 0;
@@ -74,60 +74,67 @@ body {
   align-items: center;
   justify-content: center;
   perspective: 600px;
-  z-index: 1;
+  height: 100px ;
+  width: 100px;
+  
 }
 
 .card {
   width: 100%;
-  height: 25px;
+  height: 50px;
   position: absolute;
-  transform-style: preserve-3d;
-  transform-origin: center bottom;
-  transition: transform 1s;
   top: 0;
-  left: 0;
-  z-index: -1;
+  transform-style: preserve-3d;
+  transform-origin: bottom;
+  transition: transform .7s;
+  z-index: 10;
 }
 
 .card .face {
+    opacity: .8;
     border-radius: 5px;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    position: absolute;
-    
+}
+.num:hover .card {
+  z-index: 12;
+  transform: rotateX(-180deg) translateY(-50px) ;
 }
 
-.face .front {
+.face.front {
     
     background-color: hsl(236deg 21% 17%);
 }
-.face .back {
-    
+.face.back {
+    transform: rotateX(180deg);
     background-color: var(--Dark-desaturated-blue);
+
 }
 
 .single-box .num :is(.top, .bot) {
-  height: 25px;
-  width: 100%;
-  border-radius: 4px 4px 5px 5px;
+  height: 50px;
+    width: 100%;
+    border-radius: 8px 8px 5px 5px;
 }
 
 .single-box .num .top {
-    top: 0;
+  position: absolute;
+  top: 0;
   background-color: hsl(236deg 21% 17%);
 }
 .single-box .num .bot {
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
   background-color: var(--Dark-desaturated-blue);
   box-shadow: 0px 5px 0px 0px hsl(234deg 17% 12%);
 }
 .single-box .num p {
   position: relative;
-  z-index: 1;
+  z-index: 11;
   color: var(--Soft-red);
   margin: 10px auto;
-  font-size: 25px;
+  font-size: 3rem;
 }
 
 .single-box p {
@@ -161,4 +168,15 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
+}
+ 
+/* social-icons */
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+}
+
+.social-icons svg:hover path {
+  fill: var(--Soft-red);
 }
